# cobalt-agent

./: .clinerules  .gitignore  ARCHITECTURE_ASSESSMENT.md  cobalt.sh  cobalt_master_context.txt  config.yaml  docker-compose.yml  orchestration_plan.json  pyproject.toml
cobalt_agent/: config.py  interface.py  llm.py  main.py  prompt.py  tool_manager.py
cobalt_agent/brain/: cortex.py
cobalt_agent/brain/strategies/: second_day_play.py
cobalt_agent/memory/: __init__.py  core.py  postgres.py
cobalt_agent/skills/productivity/: scribe.py  (+1 more)
cobalt_agent/tools/: browser.py  finance.py  search.py
configs/: config.yaml  prompts.yaml  rules.yaml  scanners.yaml  strategies.yaml
data/: memory.json
dev_utils/: brain_scan.py  check_gemini_models.py  create_missing_tasks.py  create_prd.py  db_status.py  generate_constitution.py  generate_context.py  ingest_knowledge.py  init_5_pillar_schema.py  lightspeed_formatter.py  live_run_dynamic_scanners.py  live_run_finviz.py  live_run_finviz_quote.py  live_run_orchestrator.py  manage_vault.py  reset_memory_table.py  test_5_pillar_db.py  test_brain_connection.py  test_config_override.py  test_prompt.py  test_routing.py  update_board.py  wipe_memory.py
plans/: main_initialization.md
src/cobalt_agent/: config.py  interface.py  llm.py  main.py  main.py.bak  persona.py  prompt.py
src/cobalt_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_browser_actions.py  test_browser_aom.py  test_browser_fast_path.py  test_config_override.py  test_cortex.py  test_daemon.py  test_finviz_extractor.py  test_llm.py  test_logic_lab.py  test_memory_integration.py  test_mock_debug.py  test_orchestrator.py  test_postgres_graph.py  test_postgres_memory.py  test_proposals_intent.py  test_role_switch.py  test_scheduler.py  test_scribe.py  test_strategies.py  test_universal_extractor.py  test_vault.py  test_vision.py
(+46 files in other folders)
